<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:padding="@dimen/activity_small_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/card_back_dark"
        android:padding="@dimen/activity_small_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pphoto"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/activity_small_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pname"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:background="@drawable/card_back"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/activity_small_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_default_margin"
            android:gravity="center"
            android:text="@string/chooselang_notice"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/small_text" />

        <Button
            android:id="@+id/java"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/java"
            android:theme="@style/DefaultButton" />

        <Button
            android:id="@+id/cpp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/cpp"
            android:theme="@style/DefaultButton" />

        <Button
            android:id="@+id/python"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/python"
            android:theme="@style/DefaultButton" />

        <Button
            android:id="@+id/php"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/php"
            android:theme="@style/DefaultButton" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_default_margin"
            android:onClick="signOut"
            android:text="@string/sign_out"
            android:theme="@style/DarkButton" />
    </LinearLayout>

</LinearLayout>