<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizStart"
    android:orientation="vertical"
    android:padding="@dimen/activity_default_padding">

    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/progress_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NumberProgressBar_Beauty_Red"
        app:progress_max="30"
        android:layout_marginBottom="@dimen/activity_default_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_no" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_default" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:layout_weight="0"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opta"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/optb"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/optc"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/optd"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz_flow_notice"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/small_text"
            android:textStyle="italic" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submitbtn"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:onClick="submitClick"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:layout_weight="1"
                android:id="@+id/prvbtn"
                android:theme="@style/ThemeOverlay.MyDefaultButton"
                android:onClick="prevClick" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_weight="1"
                android:id="@+id/nxtbtn"
                android:theme="@style/ThemeOverlay.MyDefaultButton"
                android:onClick="nxtClick"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>